--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <input type="text" name="name" id="name" placeholder="Your Name" required>
             <input type="email" name="email" id="email" placeholder="Your Email" required>
             <textarea name="message" id="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
+            <button type="sendMail()">Send</button>
         </form>
         <p>You can also reach me directly at: <strong>+33749033679</strong></p>
         <p>Or connect with me on <a href="https://linkedin.com/in/haidar-esber">LinkedIn</a>.</p>
