--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Haidar Esber - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-      (function(){
-          emailjs.init("YOUR_USER_ID");
-      })();
-    </script>
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+(function(){
+  emailjs.init({
+    publicKey: "c2pM4Kh6AvReATuKM",
+  });
+})();
+</script>
 </head>
 <body>
     <!-- Navbar -->
