--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
         <h3>Education</h3>
         <ul>
             <li>Bachelor 3 Concepteur développeur d'applications - Learn IT / Open Campus</li>
-            <li>IT Essentials - Cisco Networking Academy</li>
-            <li>Web Design - United Nations</li>
+            <li>Licence 1-2 Maths-Informatique</li>
             <!-- Add more details -->
         </ul>
         <h3>Certifications</h3>
         <ul>
+            <li>IT Essentials - Cisco Networking Academy</li>
+            <li>Web Design - United Nations</li>
             <li>Introduction to CyberSecurity - Cisco Networking Academy</li>
             <li>Arduino Uno Robotics Certificate - Lebanese Organisation for Studies and Technology</li>
             <li>EF SET English Certification - C2 Proficient</li>
+            <li>Certification PIX</li>
+            <li>Teaching and Leadership program - LOST</li>
             <!-- Add more certifications -->
         </ul>
     </section>
