--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <h3>Education</h3>
         <ul>
             <li>Bachelor 3 Concepteur développeur d'applications - Learn IT / Open Campus</li>
-            <li>Licence 1-2 Maths-Informatique</li>
+            <li>Certified CISCO Technician - CISCO</li>
+            <li>Licence 1-2 Maths-Informatique - University of Angers</li>
             <!-- Add more details -->
         </ul>
         <h3>Certifications</h3>
