--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <li>Python</li>
                     <li>Java</li>
                     <li>SQL</li>
+                    <li>Rust</li>
                     <!-- Add more skills -->
                 </ul>
             </div>
